Apply java8 features:
* Use references.
* Simplify stream.
* Use Comparator.